# controllers/utils.js
@@ -3,6 +3,8 @@ var glob = require("glob");
 var svgCaptcha = require('svg-captcha');
 var request = require('request');
 var utils_ctrl = require('./utils')
+var code = require('../config/error_code')
+var _ = require('lodash')
 /**
  * 获取指定目录下jpg文件个数
  * @param path
@@ -171,6 +173,63 @@ exports.smsValid = function (req) {
     })
   })
 
+}/**
+ * 校验短信验证码
+ * 
+验证通过
+
+{
+    "is_valid": true
+}
+验证不通过
+
+{
+    "is_valid": false,
+    "error": {
+        "code": *****,
+        "message": "******"
+    }
+}
+ */
+exports.smsValid = function (req) {
+  let msg_id = req.session.msg_id//发送短信后记录的msg_id
+  let verification = req.body.verification//客户输入的短信验证码
+  let appKey = require('../config/jpush').appKey
+  let masterSecret = require('../config/jpush').masterSecret
+  let smsvalidurl = require('../config/jpush').smsvalidurl
+  smsvalidurl = smsvalidurl.replaceAll('{msg_id}', msg_id)
+  let basicToken = appKey + ':' + masterSecret
+  let basicToken_buffer = new Buffer(basicToken)
+  let basicTokenBase64 = basicToken_buffer.toString('base64');
+
+  let options = {
+    url: smsvalidurl,
+    headers: {
+      'Authorization': 'Basic ' + basicTokenBase64,
+      'content-type': 'application/json; charset=utf-8'
+    },
+    json: true,
+    body: {
+      code: verification
+    }
+  }
+  return new Promise(function (resolve, reject) {
+    request.post(options, function (err, httpResponse, body) {
+      if (err) {
+        console.log('短信验证码err', err)
+        // return res.api_error( { code: 99999, msg: err.message })
+        resolve(false)
+      }
+      if (typeof (body.error) != 'undefined') {
+        console.log('短信验证码失败', body)
+        // return res.api_error( { code: body.error.code, msg: body.error.message })
+        resolve(false)
+      }
+      // return res.api(body, { code: 0, msg: '发送成功' })
+      resolve(true)
+    })
+  })
+
 }
 
 
@@ -184,17 +243,6 @@ exports.smsValid = function (req) {
  * 
  */
 exports.captcha = function (req, res) {
-  // var width = parseInt(req.params.width) || 80
-  // var height = parseInt(req.params.height) || 30
-  // var code = req.session.code = parseInt(Math.random() * 9000 + 1000)
-  // var captcha = new captchapng(width, height, code)
-
-  // captcha.color(0, 0, 0, 0)
-  // captcha.color(80, 80, 80, 255)
-
-  // var img = captcha.getBase64()
-  // var imgbase64 = new Buffer(img, 'base64')
-  // res.end(imgbase64)
   var width = req.query.width || 150
   var height = req.query.height || 50
   var options = {
@@ -208,4 +256,18 @@ exports.captcha = function (req, res) {
   req.session.captcha = captcha.text;
   res.set('Content-Type', 'image/svg+xml');
   res.status(200).send(captcha.data);
+}
+
+/**
+ * 校验验证码captcha
+ */
+exports.captchaValid = function (req,res) {
+  let captcha_ = req.body.captcha//上传captcha
+  let captcha = req.session.captcha//服务端captcha
+  if (!_.isEqual(_.toUpper(captcha_), _.toUpper(captcha))) {
+    //请正确输入验证码
+		return res.api_error({ code: code.getErrorCode_name('auth_captcha_err'), msg: code.getErrorMessage_name('auth_captcha_err') })
+  } else {
+    return res.api(null, { code: 0, msg: '校验成功' })
+  }
 }
