# public/swagger/api.json
@@ -499,26 +499,38 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "successful operation",
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/api/utils/captchaValid": {
+            "post": {
+                "tags": [
+                    "utils"
+                ],
+                "summary": "校验验证码",
+                "description": "校验验证码",
+                "operationId": "captchaValid",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "captchaValid object",
+                        "required": true,
                         "schema": {
-                            "type": "string"
-                        },
-                        "headers": {
-                            "X-Rate-Limit": {
-                                "type": "integer",
-                                "format": "int32",
-                                "description": "calls per hour allowed by the user"
-                            },
-                            "X-Expires-After": {
-                                "type": "string",
-                                "format": "date-time",
-                                "description": "date in UTC when token expires"
-                            }
+                            "type": "object",
+                            "$ref": "#/definitions/captchaValid_data"
                         }
-                    },
-                    "400": {
-                        "description": "Invalid username/password supplied"
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
                     }
                 }
             }
@@ -939,7 +951,18 @@
                 "name": "UpdatePasswordByStringtoken_Data"
             }
         },
-
+        "captchaValid_data": {
+            "type": "object",
+            "properties": {
+                "captcha": {
+                    "type": "string",
+                    "example": ""
+                }
+            },
+            "xml": {
+                "name": "captchaValid_data"
+            }
+        },
         "sendSMS_data": {
             "type": "object",
             "properties": {
