# routes/api/utils.js
@@ -7,4 +7,5 @@ router.get('/getJpg', utils_ctrl.getJpg)//获取图片
 router.get('/captcha', utils_ctrl.captcha)//获取验证码
 router.post('/sendSMS', utils_ctrl.sendSMS)//发送短信
 router.post('/smsValidTest', utils_ctrl.smsValidTest)//校验短信(test)
+router.post('/captchaValid', utils_ctrl.captchaValid)//校验验证码
 module.exports = router
